--- a/index.html
+++ b/index.html
@@ -6,5 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="navbar">
+        <div>Header Logo</div>
+        <div>
+          <ul>
+            <li>Header link one</li>
+            <li>Header link two</li>
+            <li>Header link three</li>
+          </ul>
+        </div>
+      </div>
+      <div class="hero">
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes under the main title. It's a
+            smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div><img alt="this is a placeholder for an image" href="" /></div>
+      </div>
+    </div>
+    <div class="section1">
+      <h2>Some random information.</h2>
+      <div class="cards">
+        <div class="card">
+          <img />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </div>
+    <div class="section2">
+      <p>
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+      </p>
+      <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="section3">
+      <div>
+        <div>
+          <h3>Call to action! It's time!</h3>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div><button>Sign up</button></div>
+      </div>
+    </div>
+    <div class="footer">Copiright &copy; The Odin Project 2021</div>
+  </body>
 </html>
