--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="header">
       <div class="navbar">
-        <div>Header Logo</div>
+        <div class="logo">Header Logo</div>
         <div>
           <ul>
-            <li>Header link one</li>
-            <li>Header link two</li>
-            <li>Header link three</li>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
           </ul>
         </div>
       </div>
       <div class="hero">
-        <div>
+        <div class="hero-text">
           <h1>This website is awesome</h1>
           <p>
             This website has some subtext that goes under the main title. It's a
@@ -27,47 +33,49 @@
           </p>
           <button>Sign up</button>
         </div>
-        <div><img alt="this is a placeholder for an image" href="" /></div>
+        <div class="hero-image">
+          <div>this is a placeholder for an image</div>
+        </div>
       </div>
     </div>
     <div class="section1">
       <h2>Some random information.</h2>
       <div class="cards">
         <div class="card">
-          <img />
+          <div class="img"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img />
+          <div class="img"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img />
+          <div class="img"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img />
+          <div class="img"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
       </div>
     </div>
     <div class="section2">
-      <p>
+      <p class="italic">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
         All I know is that it looks nice.
       </p>
-      <p>-Thor, God of Thunder</p>
+      <p class="bold">-Thor, God of Thunder</p>
     </div>
     <div class="section3">
-      <div>
+      <div class="call">
         <div>
           <h3>Call to action! It's time!</h3>
           <p>
             Sign up for our product by clicking that button right over there!
           </p>
         </div>
-        <div><button>Sign up</button></div>
+        <div><button class="border-button">Sign up</button></div>
       </div>
     </div>
     <div class="footer">Copiright &copy; The Odin Project 2021</div>
